# peek

./: .gitignore  AUTHORS  CITATION.cff  Cargo.toml  EXAMPLES.md  NOTICE  README.md  pyproject.toml
benchmarks/: ENVIRONMENT.md  README.md
benchmarks/w1/: README.md  aggregate.py  run_w1_sglang.sh  run_w1_vllm.sh
benchmarks/w1/results_vllm/: env.txt
benchmarks/w2/: README.md  run_w2_sglang.sh  run_w2_vllm.sh
benchmarks/w3/: README.md  run_w3_sglang.sh  run_w3_sglang_dp2.sh  run_w3_vllm.sh  run_w3_vllm_dp2.sh
benchmarks/w4/: README.md  aggregate.py  bench_mooncake_vllm.py  run_w4_sglang.sh  run_w4_vllm.sh
benchmarks/w4/data/: README.md  conversation_trace_le6k.jsonl  shared_system_prompt.txt
benchmarks/w5/: README.md  run_w5_sglang.sh  run_w5_vllm.sh
docs/rfc/: 0001-queue-informed-kv-cache-management.md  README.md  post-sglang.md  post-vllm.md
patches/sglang/: README.md
peek-nips/: .gitignore  Cargo.toml  EXAMPLES.md  NOTICE  README.md  pyproject.toml
peek-nips/benchmarks/: README.md  REPRODUCE.md
peek-nips/benchmarks/w1/: aggregate.py  compare_to_paper.py  run_w1_sglang.sh  (+1 more)
peek-nips/scripts/: install_peek_sglang.sh  install_peek_vllm.sh
peek-nips/src/: lib.rs  pending.rs  tree.rs
python/peek/: __init__.py  _core.pyi  preset.py  schedule.py
scripts/: install_peek_sglang.sh  install_peek_vllm.sh
scripts/bench/: bench_agent_sessions.py  bench_shared_prompts.py
scripts/peek_sitecustomize/: sitecustomize.py
src/: lib.rs  pending.rs  tree.rs
tests/offline/: debug_window_reorder.py  test_bidirectional_state.py  test_client_dfs_online.py  test_client_server_feedback.py  test_dfs_trie_add_remove.py  test_full_path_verification.py  test_full_pipeline.py  test_incremental_trie.py  test_online_dfs_reorder.py  test_poisson_client.py  test_poisson_remove_on_completion.py  test_queue_aware_eviction.py  test_remove_at_ttft.py  test_reorder.py  test_scheduler.py  test_server_push_scheduled.py  test_server_receives_tags.py  test_trie.py
tests/online/: conftest.py  test_compute_main_hits.py  test_eviction_mode_parsing.py  test_lpm_on_peek.py  test_pending_tree.py  test_vllm_patches.py
upstream_prs/: README.md
upstream_prs/sglang/: 0001-queue-aware-eviction.patch  PR.md  README.md  test_queue_aware_eviction.py
upstream_prs/vllm/: 0001-queue-aware-eviction.patch  PR.md  README.md  test_queue_aware_eviction.py
(+144 files in other folders)
