# Copyright 2026 Bing Xie
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "peek"
version = "0.1.0"
description = "Persistent radix tree for pending LLM requests"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Bing Xie" }]

[tool.maturin]
module-name = "peek._core"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests that require a CUDA-capable GPU and a real engine (sglang or vllm) running. Skip with `pytest -m 'not gpu'`.",
    "engine: tests that import sglang or vllm Python modules but do not require a running server (CPU-only OK).",
]
